index.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');


*,
*:before,
*:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  /* height: 2000px; */
  height: auto;
  font-size: 18px;
  line-height: 1.5;
  background-color: whitesmoke;
}

ul,
li,
h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
.logo {
  font-family: 'Lato', 'Verdana', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  margin: 0;
  padding: 0;
}

/* .inner {
  width: 800px;
  position: relative;
  margin: 0 auto;
} */

header {
  /* position: fixed; */
  width: 100%;
  height: 130px;
  background: #2d2d2d;
  transition: 0.7s all;
  z-index: 100;
}

body.header-fixed header {
  /* position: fixed; */
  top: 0;
  right: 0;
  padding-top: 0;
  width: 100%;
  z-index: 2;
}

li {
  list-style: none;
}

nav {
  overflow: hidden;
}

nav ul {
  float: center;

  /* margin-right: 70px; */
}

nav li {
  display: inline;
  float: left;
}

nav a {

  display: inline-flex;
  /* color: #fff; */
  text-decoration: none;
  transition: 0.3s all;
  padding: 30px 20px 40px 0px;
  text-align: center;
  font-size: 30px;
  color: rgb(126, 125, 125);
  background-color: #2d2d2d;
  letter-spacing: 0.1em;
  text-shadow: -1px -1px 1px #111, 2px 2px 1px #363636;
}

nav a:hover,
nav a.active {
  color: whitesmoke;
}

.logo {
  margin-left: 40px;
  float: left;
  transition: 0.7s all;
}

.logo img {
  display: block;
  max-width: 32%;
  max-height: 32%;
  box-shadow: 0px 0px 0px 0px black, 0px 0px 0px 0px black;
}

img {
  display: block;
  max-width: 90%;
  max-height: 90%;
  border-radius: 100%;
  box-shadow: 9px 9px 16px rgb(163, 177, 198, 0.6),
    -9px -9px 16px rgba(255, 255, 255, 0.5);
}

/* img:hover {
  transform: scale(1.1, 1.1);
  box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
    -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
} */

img:hover,
a.active img {
  transform: scale(1.1, 1.1);
  box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
    -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
}

.roxy_pic img {
  display: block;
  max-width: 9%;
  max-height: 9%;
  box-shadow: 0px 0px 0px 0px black, 0px 0px 0px 0px black;
  margin-right: 40px;
  float: right;
  transition: 0.7s all;
  margin-top: -10%;
  display: inline-flex;
}

.DDD {
  display: flex;
  align-items: center;

  justify-content: center;
}

/* body.header-fixed .logo {
  font-size: 10px;
} */

h1 {
  font-size: 30px;
  margin-left: 3%;
  margin-top: 2%;
  text-align: center;
  color: black;

}

h2 {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-size: 40px;
  font-weight: bold;
  margin-left: 3%;
  margin-top: 2%;
}

p {
  font-family: Lato;
  margin-left: 40px;
  font-weight: 500;
  column-count: 3;
  column-gap: 40px;
  margin-right: 40px;
  font-size: 16px;
}

.flex-container {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  margin-top: 40px;
  margin-left: 15%;
  margin-right: 12%;
}

.flex-container>div {
  margin-top: 20px;
  margin: 10px;
  padding: 10px;
  font-size: 30%;
  max-width: 350px;
  flex: auto;
}

hr {
  margin-left: 2%;
  margin-right: 2%;
  margin-top: 4%;
  color: black;
}


.footer {
  margin-top: 50px;
  padding-bottom: 10px;
  width: 100%;
  font-size: 15px;
  height: 80px;
  background-color: #2d2d2d;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: baseline;
  align-items: center;
  justify-content: center;
  font-family: Arial, Helvetica, sans-serif;
  color: aliceblue;
  letter-spacing: 1px;
  font-weight: 700;
}



.footer a {
  color: whitesmoke;
  text-decoration: none;
  margin-left: 25px;
}

